force-app/main/default/objects/Automotive_Opp_Task_Settings__c/Automotive_Opp_Task_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Config data used in task creation from Process Builder when Automotive Opportunity is created.</description>
    <label>Automotive Opp Task : Settings</label>
</CustomObject>