force-app/main/default/objects/Automotive_Opp_Task_Settings__c/fields/AutomotiveTask_MarketingPICTask_Subject__c.field-meta.xml
<CustomField>
    <fullName>AutomotiveTask_MarketingPICTask_Subject__c</fullName>
    <label>AutomotiveTask_MarketingPICTask_Subject</label>
    <length>20</length>
    <type>Text</type>
</CustomField>