force-app/main/default/objects/Automotive_Opp_Task_Settings__c/fields/AutomotiveTask_OEMPtnrTask_Subject__c.field-meta.xml
<CustomField>
    <fullName>AutomotiveTask_OEMPtnrTask_Subject__c</fullName>
    <defaultValue>&quot;OEM Partnership&quot;</defaultValue>
    <label>AutomotiveTask_OEMPtnrTask_Subject</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>