force-app/main/default/objects/Automotive_Opp_Task_Settings__c/fields/AutomotiveTask_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>AutomotiveTask_RecordTypeId__c</fullName>
    <label>AutomotiveTask_RecordTypeId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>