force-app/main/default/objects/Automotive_Opp_Task_Settings__c/fields/AutomotiveTask_SA_UserId__c.field-meta.xml
<CustomField>
    <fullName>AutomotiveTask_SA_UserId__c</fullName>
    <description>Automotive Task - Solution Architect User Id</description>
    <label>AutomotiveTask_SA_UserId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>