force-app/main/default/objects/Automotive_Opp_Task_Settings__c/fields/AutomotiveTask_SATask_Subject__c.field-meta.xml
<CustomField>
    <fullName>AutomotiveTask_SATask_Subject__c</fullName>
    <defaultValue>&quot;Solutions Architect (SA)&quot;</defaultValue>
    <label>AutomotiveTask_SATask_Subject</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>