force-app/main/default/objects/Automotive_Opp_Task_Settings__c/fields/AutomotiveTask_StatusTask_Subject__c.field-meta.xml
<CustomField>
    <fullName>AutomotiveTask_StatusTask_Subject__c</fullName>
    <defaultValue>&quot;Auto Status Update&quot;</defaultValue>
    <label>AutomotiveTask_StatusTask_Subject</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>