force-app/main/default/objects/Automotive_Opp_Task_Settings__c/fields/AutomotiveTask_WDWDTask_Subject__c.field-meta.xml
<CustomField>
    <fullName>AutomotiveTask_WDWDTask_Subject__c</fullName>
    <defaultValue>&quot;What do they do?&quot;</defaultValue>
    <label>AutomotiveTask_WDWDTask_Subject</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>